RESOLVED FIXED66003
JSEvaluteScript does not return the correct object when given JSONP data
https://bugs.webkit.org/show_bug.cgi?id=66003
Summary JSEvaluteScript does not return the correct object when given JSONP data
Oliver Hunt
Reported 2011-08-10 12:16:34 PDT
JSEvaluteScript does not return the correct object when given JSONP data
Attachments
Patch (2.87 KB, patch)
2011-08-10 12:19 PDT, Oliver Hunt
barraclough: review+
Oliver Hunt
Comment 1 2011-08-10 12:19:05 PDT
Oliver Hunt
Comment 2 2011-08-10 12:43:01 PDT
Note You need to log in before you can comment on or make changes to this bug.