JSEvaluteScript does not return the correct object when given JSONP data https://bugs.webkit.org/show_bug.cgi?id=66003

Reviewed by Gavin Barraclough.

Source/JavaScriptCore:

Make sure we propagate the result of the function call rather than the
argument.

* interpreter/Interpreter.cpp:
(JSC::Interpreter::execute):

Tools:

Add a test case.

* DumpRenderTree/mac/DumpRenderTree.mm:
(testStringByEvaluatingJavaScriptFromString):

Canonical link: https://commits.webkit.org/81859@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92785 268f45cc-cd09-0410-ab3c-d52691b4dbfc