Tools/DumpRenderTree/mac/DumpRenderTree.mm
@@ -354,6 +354,7 @@ void testStringByEvaluatingJavaScriptFromString()
         @"", @"undefined",
         @"true", @"true",
         @"false", @"false",
+        @"", @"alert('Should not be result')",
         nil
     ];
 
